# chronicle

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  chronicle.toml.example  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: README.md  bump-version.sh  release.sh
src/: error.rs  main.rs
src/cli/: config.rs  gen.rs  mod.rs  show.rs  state.rs
src/collectors/: git.rs  mod.rs  notes.rs  todo.rs
src/config/: mod.rs  types.rs
src/display/: formatter.rs  mod.rs  terminal.rs
src/models/: chronicle.rs  mod.rs  source.rs
src/renderer/: mod.rs
src/state/: mod.rs  types.rs
tests/: integration_test.rs  terminal_rendering_test.rs
