[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
git2 = "0.18"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
insta = "1.34"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
