[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
git2 = "0.20"
thiserror = "2.0"
termimad = "0.34"

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.1"
predicates = "3.1"
serial_test = "3.2"

[lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "warn"
